--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,5 +1,5 @@
 #footer {
-  background-color: var(--color-secondary);
+  background-color: #4AD294;
   padding: 3rem 0 12rem 0;
 }
 .footer-social {
